# JNI_Example-Principle

./: README.md
DemoCPP/: CMakeLists.txt  Demo.cpp  build_app.sh  run_app.sh
DemoJNI/: Demo.java  run_java.sh
DemoJNI/JNI/: CMakeLists.txt  build_lib.sh  classPackage_ClassA.cpp  classPackage_ClassA.h
DemoJNI/classPackage/: ClassA.java  generate_JNI_header.sh
LibCPP/: CMakeLists.txt  build_lib.sh
LibCPP/include/: NekiLib.h
LibCPP/src/: NekiLib.cpp
